Fixed overflow on navbar avatar

--- a/wdi-project-2/src/scss/main.scss
+++ b/wdi-project-2/src/scss/main.scss
@@ -45,9 +45,6 @@ h1 {
     line-height: 55px;
   }
 }
-// .comment {
-//   margin-left: 20px;
-// }
 
 header {
   background-color: #59ce00;
@@ -79,4 +76,10 @@ header {
   text-align: center;
   margin-right: 20px;
   text-decoration: none;
+}
+
+.navbar-fixed {
+  a {
+    height: -webkit-fill-available;
+  }
 }
